@@ -123,17 +123,10 @@ public class BenchmarkHashBuildAndJoinOperators
         public void setup()
         {
             switch (hashColumns) {
-                case "varchar":
-                    hashChannels = Ints.asList(0);
-                    break;
-                case "bigint":
-                    hashChannels = Ints.asList(1);
-                    break;
-                case "all":
-                    hashChannels = Ints.asList(0, 1, 2);
-                    break;
-                default:
-                    throw new UnsupportedOperationException(format("Unknown hashColumns value [%s]", hashColumns));
+                case "varchar" -> hashChannels = Ints.asList(0);
+                case "bigint" -> hashChannels = Ints.asList(1);
+                case "all" -> hashChannels = Ints.asList(0, 1, 2);
+                default -> throw new UnsupportedOperationException(format("Unknown hashColumns value [%s]", hashColumns));
             }
             executor = newCachedThreadPool(daemonThreadsNamed(getClass().getSimpleName() + "-%s"));
             scheduledExecutor = newScheduledThreadPool(2, daemonThreadsNamed(getClass().getSimpleName() + "-scheduledExecutor-%s"));
@@ -168,7 +161,7 @@ public class BenchmarkHashBuildAndJoinOperators
 
         protected void initializeBuildPages()
         {
-            RowPagesBuilder buildPagesBuilder = rowPagesBuilder(hashChannels, ImmutableList.of(VARCHAR, BIGINT, BIGINT));
+            RowPagesBuilder buildPagesBuilder = rowPagesBuilder(ImmutableList.of(VARCHAR, BIGINT, BIGINT));
 
             int maxValue = buildRowsNumber / buildRowsRepetition + 40;
             int rows = 0;
@@ -211,17 +204,10 @@ public class BenchmarkHashBuildAndJoinOperators
             super.setup();
 
             switch (outputColumns) {
-                case "varchar":
-                    outputChannels = Ints.asList(0);
-                    break;
-                case "bigint":
-                    outputChannels = Ints.asList(1);
-                    break;
-                case "all":
-                    outputChannels = Ints.asList(0, 1, 2);
-                    break;
-                default:
-                    throw new UnsupportedOperationException(format("Unknown outputColumns value [%s]", hashColumns));
+                case "varchar" -> outputChannels = Ints.asList(0);
+                case "bigint" -> outputChannels = Ints.asList(1);
+                case "all" -> outputChannels = Ints.asList(0, 1, 2);
+                default -> throw new UnsupportedOperationException(format("Unknown outputColumns value [%s]", hashColumns));
             }
 
             JoinBridgeManager<PartitionedLookupSourceFactory> lookupSourceFactory = getLookupSourceFactoryManager(this, outputChannels, partitionCount);
@@ -252,7 +238,7 @@ public class BenchmarkHashBuildAndJoinOperators
 
         protected void initializeProbePages()
         {
-            RowPagesBuilder probePagesBuilder = rowPagesBuilder(hashChannels, ImmutableList.of(VARCHAR, BIGINT, BIGINT));
+            RowPagesBuilder probePagesBuilder = rowPagesBuilder(ImmutableList.of(VARCHAR, BIGINT, BIGINT));
 
             Random random = new Random(42);
             int remainingRows = PROBE_ROWS_NUMBER;
@@ -455,7 +441,7 @@ public class BenchmarkHashBuildAndJoinOperators
 
         // assert that there are any rows
         checkState(!pages.isEmpty());
-        checkState(pages.get(0).getPositionCount() > 0);
+        checkState(pages.getFirst().getPositionCount() > 0);
     }
 
     @Test
